2008-05-02  Sebastien Pouliot  <sebastien@ximian.com>

	* UseCorrectSuffixRule.cs: Use TryGetValue to avoid access to the 
	Dictionary. Refactor textual report outside the CheckType (it's 
	larger) and avoid reporting twice the first item.

2008-04-26  Nestor Salceda  <nestor.salceda@gmail.com>

	* ParameterNamesShouldMatchOverridenMethodRule.cs:  Remove a duplicated
	call to ReturnType.  

2008-04-26  Jb Evain  <jbevain@novell.com>

	* UseCorrectCasingRule.cs: check for proper namespace casing.
	Rules are as follows: if the namespace length is 1, we
	report an error, if it's 2, we check that all letters
	are properly cased, if it's 3, we check that all letters
	are not upper cased, and that we're pascal case otherwise.

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com>

	* UseCorrectSuffixRule.cs: Allow the Set suffix for collections.

2008-03-19  Sebastien Pouliot  <sebastien@ximian.com>

	* UseCorrectSuffixRule.cs: Fix case where generics are used (since
	it affects the suffix of the type). Fix bug #372250

2008-03-16  Sebastien Pouliot  <sebastien@ximian.com>

	* UseCorrectCasingRule.cs: Ignore generated code. VS SWF designer
	can generate properties with bad cases (e.g. for resources).

2008-03-15  Sebastien Pouliot  <sebastien@ximian.com>

	* ParameterNamesShouldMatchOverridenMethodRule.cs: CSC anonymous 
	types don't follow this rule so we ignore code generated by the 
	compiler.
	* DetectNonAlphanumericInTypeNamesRule.cs: Rule does not apply 
	for interfaces used in COM interop.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* DetectNonAlphaNumericsInTypeNamesRule.cs
	* DoNotPrefixValuesWithEnumNameRule.cs
	* DoNotUseReservedInEnumValueNamesRule.cs
	* EnumNotEndsWithEnumOrFlagsSuffixRule.cs
	* ParameterNamesShouldMatchOverridenMethodRule.cs
	* UseCorrectCasingRule.cs
	* UseCorrectPrefixRule.cs
	* UseCorrectSuffixRule.cs
	* UsePluralNameInEnumFlagsRule.cs
	* UsePreferredTermsRule.cs
	* UseSingularNameInEnumsUnlessAreFlagsRule.cs: