@@ -1,3 +1,8 @@
+2008-05-11  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* DoNotPrefixEventsWithAfterOrBeforeRule.cs: New. Rule to check
+	if event names starts with either After of Before prefixes.
+
 2008-05-02  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* UseCorrectSuffixRule.cs: Use TryGetValue to avoid access to the 
